--- a/html/changes_size_template.html
+++ b/html/changes_size_template.html
@@ -16,6 +16,11 @@
     rect:hover {
         fill: rgb(62, 104, 146);
     }
+    .brush .extent {
+        stroke: #fff;
+        fill-opacity: .125;
+        shape-rendering: crispEdges;
+    }
 </style>
 <body>
 <script src="d3.v3.min.js"></script>
@@ -71,9 +76,11 @@ date,changes size\n\
     const value = "changes size";
     const yAxisLabel = "changes size per day";
 
-    var margin = {top: 20, right: 20, bottom: 30, left: 40},
+    var margin = {top: 20, right: 20, bottom: 100, left: 40},
+        margin2 = {top: 430, right: 20, bottom: 30, left: 40},
         width = 960 - margin.left - margin.right,
-        height = 500 - margin.top - margin.bottom;
+        height = 500 - margin.top - margin.bottom,
+        height2 = 500 - margin2.top - margin2.bottom;
 
     var dateFormat = d3.time.format("%d/%m/%Y");
     var valueFormat = function(n) {
@@ -82,15 +89,22 @@ date,changes size\n\
     };
 
     var x = d3.time.scale().nice().rangeRound([0, width]);
+    var x2 = d3.time.scale().nice().rangeRound([0, width]);
     var y = d3.scale.linear().range([height, 0]);
+    var y2 = d3.scale.linear().range([height2, 0]);
     var xAxis = d3.svg.axis().scale(x).orient("bottom");
+    var xAxis2 = d3.svg.axis().scale(x2).orient("bottom");
     var yAxis = d3.svg.axis().scale(y).orient("left").tickFormat(valueFormat);
+
+    var brush = d3.svg.brush().x(x2).on("brush", onBrush);
 
     var svg = d3.select("body").append("svg")
             .attr("width", width + margin.left + margin.right)
             .attr("height", height + margin.top + margin.bottom)
             .append("g")
             .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+    svg.append("defs").append("clipPath").attr("id", "chartClip")
+            .append("rect").attr("width", width).attr("height", height);
 
     var data = d3.csv.parse(rawData);
     data.forEach(function (d) {
@@ -102,8 +116,12 @@ date,changes size\n\
     var toDate = data[data.length - 1].date;
     x.domain([fromDate, d3.time.day.offset(toDate, 1)]);
     y.domain([0, d3.max(data, function (d) { return d[value]; })]);
+    x2.domain(x.domain());
+    y2.domain(y.domain());
+
     var barWidth = width / d3.time.days(fromDate, toDate).length;
-    barWidth = Math.floor(barWidth - (barWidth * 0.1));
+    barWidth = Math.floor(barWidth);
+
 
     svg.append("g")
             .attr("class", "x axis")
@@ -124,6 +142,7 @@ date,changes size\n\
             .data(data)
             .enter().append("rect")
             .attr("class", "bar")
+            .attr("clip-path", "url(#chartClip)")
             .attr("x", function (d) { return x(d.date); })
             .attr("width", barWidth)
             .attr("y", function (d) { return y(d[value]); })
@@ -133,6 +152,40 @@ date,changes size\n\
                 return "date: " + dateFormat(d.date) + "\n" +
                         yAxisLabel + ": " + valueFormat(d[value]);
             });
+
+    svg.append("g")
+        .attr("transform", "translate(0," + height + ")")
+        .selectAll(".bar2")
+            .data(data)
+            .enter().append("rect")
+            .attr("class", "bar")
+            .attr("x", function (d) { return x2(d.date); })
+            .attr("width", barWidth)
+            .attr("y", function (d) { return y2(d[value]); })
+            .attr("height", function (d) { return height2 - y2(d[value]); })
+            .append("title");
+
+    var context = svg.append("g")
+            .attr("transform", "translate(" + margin2.left + "," + margin2.top + ")");
+    context.append("g")
+        .attr("class", "x brush")
+        .call(brush) // TODO not aligned with ".bar2"
+        .selectAll("rect")
+        .attr("y", -6)
+        .attr("height", height2 + 7);
+
+
+    function onBrush() {
+        var dom = brush.empty() ? x2.domain() : brush.extent();
+        x.domain(dom);
+        barWidth = width / d3.time.days(dom[0], dom[1]).length;
+        barWidth = Math.floor(barWidth);
+        svg.selectAll(".bar")
+                .data(data)
+                .attr("x", function (d) { return x(d.date); })
+                .attr("width", barWidth);
+        svg.select(".x.axis").call(xAxis);
+    }
 
 </script>
 </body>
