--- a/html/changes_size_chart_template.html
+++ b/html/changes_size_chart_template.html
@@ -26,7 +26,7 @@
 <script src="d3.v3.min.js"></script>
 <script>
     var rawData = /*data_placeholder*/"\
-date,changes size\n\
+date,changeSize\n\
 11/08/2012,14218\n\
 13/08/2012,12977\n\
 14/08/2012,19705\n\
@@ -75,9 +75,9 @@ date,changes size\n\
 "/*data_placeholder*/;
 
     function drawChangeSizeChart(rawData) {
-        const value = "changes size";
+        const value = "changeSize";  // TODO use property instead?
         const xAxisLabel = "Date";
-        const yAxisLabel = "Changes size";
+        const yAxisLabel = "Change size";
 
         var margin = {top: 20, right: 20, bottom: 100, left: 40},
                 margin2 = {top: 430, right: 20, bottom: 30, left: 40},
